<?xml version="1.0"?>

    <RelativeLayout tools:context=".delete" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="30dp" android:layout_width="300dp" android:textSize="15dp" android:text="@string/delete4" android:layout_marginTop="5dp" android:layout_marginLeft="50dp" android:layout_below="@id/text_id04" android:id="@+id/text_id05"/>

    <TextView
        android:id="@+id/text_id01"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:drawablePadding="10dp"
        android:text="@string/deleteH"
        android:textColor="@color/colorred"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView android:layout_height="30dp" android:layout_width="300dp" android:textSize="15dp" android:text="@string/delete1" android:layout_marginTop="5dp" android:layout_marginLeft="50dp" android:layout_below="@id/text_id01" android:id="@+id/text_id02"/>

    <TextView android:layout_height="30dp" android:layout_width="300dp" android:textSize="15dp" android:text="@string/delete2" android:layout_marginTop="5dp" android:layout_marginLeft="50dp" android:layout_below="@id/text_id02" android:id="@+id/text_id03"/>

    <TextView android:layout_height="40dp" android:layout_width="300dp" android:textSize="15dp" android:text="@string/delete3" android:layout_marginTop="5dp" android:layout_marginLeft="50dp" android:layout_below="@id/text_id03" android:id="@+id/text_id04"/>

    <TextView android:layout_height="30dp" android:layout_width="300dp" android:textSize="15dp" android:text="Change number instead?" android:layout_marginTop="20dp" android:layout_marginLeft="50dp" android:layout_below="@id/text_id05" android:id="@+id/text_id06" android:textStyle="bold" android:drawablePadding="10dp" android:drawableLeft="?attr/actionModeCloseDrawable"/>

    <Button android:layout_height="30dp" android:layout_width="150dp" android:text="CHANGE NUMBER" android:layout_marginTop="10dp" android:layout_marginLeft="50dp" android:layout_below="@id/text_id06" android:id="@+id/b2" android:background="#034da2"/>

    <TextView android:layout_height="50dp" android:layout_width="300dp" android:textSize="15dp" android:text="@string/delete5" android:layout_marginTop="20dp" android:layout_marginLeft="50dp" android:layout_below="@id/b2" android:id="@+id/text_id07" android:textStyle="bold"/>

    <TextView android:layout_height="30dp" android:layout_width="300dp" android:textSize="15dp" android:text="Country" android:layout_marginTop="20dp" android:layout_marginLeft="50dp" android:layout_below="@id/text_id07" android:id="@+id/text_id08"/>

    <EditText android:layout_height="wrap_content" android:layout_width="300dp" android:layout_marginLeft="50dp" android:layout_below="@id/text_id08" android:id="@+id/editText11" android:inputType="number" android:ems="10"/>

    <TextView android:layout_height="50dp" android:layout_width="300dp" android:textSize="15dp" android:text="Phone" android:layout_marginTop="20dp" android:layout_marginLeft="50dp" android:layout_below="@+id/editText11" android:id="@+id/text_id09" android:textStyle="bold" android:gravity="start" android:textAlignment="viewStart"/>

    <EditText android:layout_height="wrap_content" android:layout_width="80dp" android:text="+91" android:layout_marginLeft="50dp" android:layout_below="@id/text_id09" android:id="@+id/editText1" android:inputType="textPersonName" android:ems="10"/>

    <EditText android:layout_height="wrap_content" android:layout_width="200dp" android:layout_marginTop="-6dp" android:layout_marginLeft="20dp" android:layout_below="@id/text_id09" android:id="@+id/editText22" android:inputType="number" android:ems="10" android:layout_toRightOf="@id/editText1"/>

    <Button android:layout_height="30dp" android:layout_width="200dp" android:textSize="18sp" android:text="Delete My Account" android:layout_marginTop="20dp" android:layout_marginLeft="50dp" android:layout_below="@id/editText22" android:id="@+id/b1" android:textColor="@android:color/background_light" android:background="#034da2" android:typeface="normal"/>

</RelativeLayout>