<?xml version="1.0"?>

    <RelativeLayout tools:context=".changenum1"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/tick2" />

    <TextView android:layout_height="50dp" android:layout_width="330dp" android:layout_marginLeft="30dp" android:id="@+id/text_id" android:gravity="start" android:layout_below="@+id/imageView2" android:textStyle="bold" android:layout_marginTop="10dp" android:textAlignment="viewStart" android:textSize="15dp" android:text="@string/changenum1"/>

    <TextView android:layout_height="50dp" android:layout_width="330dp" android:layout_marginLeft="30dp" android:id="@+id/text_id1" android:gravity="start" android:layout_below="@+id/text_id" android:layout_marginTop="10dp" android:textAlignment="viewStart" android:textSize="15dp" android:text="@string/changenum2"/>

    <TextView android:layout_height="50dp" android:layout_width="330dp" android:layout_marginLeft="30dp" android:id="@+id/text_id2" android:gravity="start" android:layout_below="@+id/text_id1" android:layout_marginTop="10dp" android:textAlignment="viewStart" android:textSize="15dp" android:text="@string/changenum3"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="140dp" android:id="@+id/b1" android:layout_below="@id/text_id2" android:layout_marginTop="195dp" android:textSize="18sp" android:text="Next" android:typeface="normal" android:textColor="@android:color/background_light" android:background="#034da2"/>

</RelativeLayout>